--- a/style.css
+++ b/style.css
@@ -4,35 +4,35 @@
     padding:0;
 }
 
-/*Iniciar Sessão cabeçalho*/
+/*Iniciar Sessão cabecalho*/
 
 .cabecalho{
-background-color: aqua;
-color: aliceblue;
+background-color: darkcyan;
+color: black;
 display: flex;
 justify-content: space-around;
 align-items: center;
 padding: 24px 0;
 }
 
-.cabeçalho-imagem{
+.cabecalho-imagem{
     width: 8%;
     border-radius: 22px; /*para definir bordas arredonddas da imagem*/
 }
 
 /*A lista não ordenada ul precisa estar alinhada em uma única linha.
-Crie um seletor para classe .cabeçalho-lista-item. adicionando nele
+Crie um seletor para classe .cabecalho-lista-item. adicionando nele
 a propriedade display com o valor inline-block:*/
 /*Aumente os espaçamentos entre os textos com a propriedade margin de valor 0 16px:*/
 /*Aumente a fonte através da propriedade font-zine de valor 24px:*/
 
-.cabeçalho-lista-item{
+.cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
     font-size: 24px;
 }
 
-.cabeçalho-lista-item{
+.cabecalho-lista-item{
    text-decoration-line: none; 
     color: brown; /*cor*/
 }
